[package]
name = "cameleon-device"
version = "0.1.13"
edition = "2021"
authors = ["Cameleon Project Developers"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/cameleon-rs/cameleon/tree/main/device"
repository = "https://github.com/cameleon-rs/cameleon"
description = """
cameleon-device provides device specific protocol decoders and basic I/O
operations for GenICam compatible devices.
"""
categories = ["computer-vision"]
keywords = ["genicam", "camera", "usb3", "gige", "uvc"]

[dependencies]
thiserror = "1.0.24"
log = "0.4.14"
semver = "1.0.0"
cfg-if = "1.0.0"
cameleon-impl = { path = "../impl", version = "0.1.13" }
nusb = "0.1.10"
futures-lite = "2.3.0"

[dev-dependencies]
trybuild = "1.0.42"

[[example]]
name = "u3v_device_enumeration"
path = "examples/u3v/device_enumeration.rs"

[[example]]
name = "u3v_device_control"
path = "examples/u3v/device_control.rs"

[package.metadata.docs.rs]
all-features = true
